Creata una nuova entità solo per i pagamenti F24